fixed width ability tables so they don't shift when numbers change

--- a/src/AbilitiesPanel.css
+++ b/src/AbilitiesPanel.css
@@ -53,6 +53,7 @@
   margin: 0 auto;
   border: 0;
   border-spacing: 0;
+  width: 85px;
 }
 
 .ability th {
